Added Signup page and user data model

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -11,6 +11,10 @@
     
     <h1>Home Page</h1>
 
+    <h2>Hello! {{username_value}}</h2>
+
+    <a href="{%url 'logout'%}">Log Out</a>
+
 </body>
 
 
