--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -17,11 +17,12 @@
 <body>
     <div class="container" style="margin-top: 15%; padding-left: 10%; padding-right: 10%;">
 
-        <h1 style="text-align: center;">Blogging App</h1>
+        <h1 style="text-align: center;">Blogging App Login</h1>
 
-        <h3 style="text-align: center;">Login</h3>
+        <h3 style="text-align: center;"><a href="{%url 'login'%}">Login</a>/ <a href="{%url 'signup'%}">Sign Up</a></h3>
 
-    <form method="POST">
+
+    <form method="POST">  
         {%csrf_token%}
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
