--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>
         My Blogging Application
-         <!-- Sample Comment -->
+         <!-- Sample Comment Part 2 -->
     </title>
 
 </head>
