--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,20 +1,55 @@
+{% load static %} 
 <!DOCTYPE HTML>
 <html>
 <head>
     <title>
         My Blogging Application
-         <!-- Sample Comment Part 2 -->
     </title>
-
+    <!-- Sample Comment Part 2 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'home' %}">Blogging App</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0)">Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0)">My Posts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'new_post' %}">Create New Post</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="text" placeholder="Search">
+              <button class="btn btn-primary" type="button">Search</button>
+            </form>
+            <li class="nav-item dropdown" style="margin-right: 50px;">
+                <a class="nav-link dropdown-toggle"  role="button" data-bs-toggle="dropdown" href="#">
+                    <img src="{%static 'main/images/user_icon.jpg' %}" alt="Avatar Logo" style="width:40px; margin-left: 15px;" class="rounded-pill">  
+                  </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{%url 'logout'%}">Log Out</a></li>
+                </ul>
+              </li>
+            
+          </div>
+        </div>
+      </nav>
     
-    <h1>Home Page</h1>
-
-    <h2>Hello! {{username_value}}</h2>
-
-    <a href="{%url 'logout'%}">Log Out</a>
+      {% block content %}{% endblock %}
 
 </body>
 
