--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -2,6 +2,27 @@
 
 {%block content%}
 
-<h1>Home Page</h1>
+{% for post in post_data_list %}
+
+<div class="container" style="margin-top: 3%;">
+
+    
+
+    <h2><a href="{% url 'post_detail' primary_key=post.pk %}">{{post.title}}</a></h2>
+    <h6 style="color: grey;">Posted by <a href="#" style="color: black;">{{post.author.username}}</a> at <a style="color: black;">{{post.time}}</a> <a href="#"><b style="color: green;">{{post.category}}</b></a></h6>
+    <div style="max-width: 80%;">
+        {% if post.brief_required %}
+        
+        <p>{{post.brief}} ... <a href="{% url 'post_detail' primary_key=post.pk %}">Read more</a></p>
+
+        {% else %}        
+        
+        <p>{{post.brief}}</p>
+
+        {% endif %}
+    </div>
+  </div>
+
+  {% endfor %}
 
 {%endblock%}
