--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'home' %}">Blogging App</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="javascript:void(0)">Categories</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">My Posts</a>
+                <a class="nav-link" href="{% url 'my_posts' %}">My Posts</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'new_post' %}">Create New Post</a>
@@ -48,8 +48,10 @@
           </div>
         </div>
       </nav>
-    
+      
+      <div class="container" style="margin-top: 7%;">
       {% block content %}{% endblock %}
+    </div>
 
 </body>
 
