--- a/templates/main/post_detail.html
+++ b/templates/main/post_detail.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 
-<div class="container" style="margin-top: 3%;">
+<div class="container" style="margin-top: 3%; margin-bottom: 5%;">
 
 {% if current_post %}
 
@@ -11,6 +11,67 @@
 
 <p>{{current_post.Body}}</p>
 
+<hr>
+
+<form method="POST" style="margin-bottom: 3%;">
+    {%csrf_token%}
+
+    {% if not logged_in %}
+    <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input name="name" type="text" class="form-control" id="name">
+        <div id="nameHelp" class="form-text">Please enter your name</div>
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input name="email" type="email" class="form-control" id="email">
+        <div id="emailHelp" class="form-text">Please enter you e-mail address</div>
+      </div>
+
+      {% endif %}
+
+    <div class="mb-3 col" style="margin-bottom: 3;">
+        <label for="comment" class="form-label">Comment</label>
+        <textarea class="form-control" name="comment" id="comment" rows="3"></textarea>
+        <div id="commentHelp" class="form-text">Please enter your comments here.</div>
+      </div>
+
+    <div class="row">
+        <div class="mb-3 form-check col-1">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Accept T&C</label>
+        </div>
+        <div class="col-2">
+        <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+  </form>
+
+  {% for comment in comment_data %}
+
+  <h6 style="color: grey;">Posted by <a href="#" style="color: black;">{{comment.Name}}</a> at <a style="color: black;">{{comment.Time}}</a></h6>
+    <div style="max-width: 80%;">
+        
+        
+        <p>{{comment.Comment}}</p>
+    </div>
+
+    {% endfor %}
+
+    <ul class="pagination">
+        {% if comment_data.has_previous %}
+        <li class="page-item"><a class="page-link" href="?comment_page={{ comment_data.previous_page_number }}">Previous</a></li>
+        {% endif %}
+        {% for i in comment_data.paginator.page_range %}
+        <li class="page-item"><a class="page-link" href="?comment_page={{i}}">{{i}}</a></li>
+        {% endfor %}
+        {% if comment_data.has_next %}
+        <li class="page-item"><a class="page-link" href="?comment_page={{ comment_data.next_page_number }}">Next</a></li>
+        {% endif %}
+      </ul>
+    
+
 {% else %}
 
 <h1>Page Unavailable</h1>
@@ -18,5 +79,7 @@
 {% endif %}
 
 </div>
+
+
 
 {%endblock%}
